# nostr-bins

./: .gitmodules  Cargo.toml  GNUmakefile  README.md  config.toml
.github/workflows/: cargo-build.yml
src/: internal.rs  lib.rs
